--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body{
 
 .mainTitle{
 	font-size: 60px;
-	margin-top: 200px;
+	margin-top: 120px;
 }
 
 .subTitle{
@@ -45,4 +45,16 @@ body{
 .drinkIngredients{
 	font-size: 25px;
 	list-style: none;
+}
+
+.drinkContainer{
+    display: none;
+    background-color: maroon;
+    width: 50%;
+    margin: auto;
+    height: 455px;
+}
+
+.drinkName h2{
+    font-size: 30px;
 }
